test/trivial/bradc/protoast/badred.good
badred.chpl:15 ERROR: syntax error
yytext is: foo
